Make sure note delete button is visible when note is focused via keyboard

--- a/source/wp-content/plugins/wporg-internal-notes/src/notes-list/notes-list-item.scss
+++ b/source/wp-content/plugins/wporg-internal-notes/src/notes-list/notes-list-item.scss
@@ -37,7 +37,7 @@
 	transition: opacity 300ms ease-in-out;
 
 	.wporg-internal-notes__note:hover &,
-	.wporg-internal-notes__note:focus & {
+	.wporg-internal-notes__note:focus-within & {
 		opacity: 100;
 	}
 }
